src/objects/Chat_Bot_Routing__c.object
<CustomObject>
    <description>Used in routing for chat bot in Ecolab project.</description>
    <label>Chat Bot Routing</label>
    <nameField>
        <displayFormat>CBR-{0000}</displayFormat>
        <label>Chat Bot Routing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Bot Routings</pluralLabel>
    <!---->
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SupportCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL</fullName>
                </value>
                <value>
                    <fullName>WATER</fullName>
                </value>
                <value>
                    <fullName>PAPER</fullName>
                </value>
                <value>
                    <fullName>ENERGY</fullName>
                </value>
                <value>
                    <fullName>FOOD &amp; BEVERAGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Article__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Article</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Walkme__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Walkme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SupportSubCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transfer_to_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer to Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Work Instruction</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Division__c</columns>
        <columns>Show_Walkme__c</columns>
        <columns>Show_Article__c</columns>
        <columns>Transfer_to_Agent__c</columns>
        <columns>Create_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Routings</label>
        <language>en_US</language>
    </listViews>
</CustomObject>